log
Wed 10 May 2023 11:39:55 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
a6073d5
Wed 10 May 2023 11:40:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
8be213b
Wed 10 May 2023 11:41:25 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
592e8e0
Wed 10 May 2023 11:42:10 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
24061b5
Wed 10 May 2023 11:42:31 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
b045813
Thu 11 May 2023 12:00:39 AM UTC: 
 heap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘heap_push’:
heap.c:37:22: error: ‘posicion’ is used uninitialized [-Werror=uninitialized]
   37 |   int padre=(posicion-1)/2;
      |             ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3c2c15f
Thu 11 May 2023 12:00:49 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘heap_push’:
heap.c:37:22: error: ‘posicion’ is used uninitialized [-Werror=uninitialized]
   37 |   int padre=(posicion-1)/2;
      |             ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
1b84f73
Thu 11 May 2023 12:01:02 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
cc9880e
Thu 11 May 2023 12:10:45 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
49e75ab
Thu 11 May 2023 12:11:33 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
63e1016
Thu 11 May 2023 12:11:57 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
fcc468d
